--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>EstateStroy</title>
+    <title>DOMBERG</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
