--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       <!-- Twitter Cards -->
       <meta name="twitter:card" content="summary_large_image">
       <meta name="twitter:title" content="DOMBERG — Строительство домов под ключ">
-      <meta name="twitter:description" content="Проекты, цены и строительство домов в Калининграде от DOMBERG.">
+      <meta name="twitter:description" content="Проектируем и строим дома в Калининграде. Строительство малоэтажных домов.">
       <meta name="twitter:image" content="https://i.ibb.co/DPQdmhQF/image.png"> <!-- Заменить на актуальное изображение -->
     
       <!-- Цвет браузера для мобилок -->
