--- a/public/index.html
+++ b/public/index.html
@@ -18,14 +18,14 @@
       <!-- Основные теги -->
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="description" content="DOMBERG — строительство малоэтажных домов в Калининграде. Проекты, цены и индивидуальный подход.">
+      <meta name="description" content="DOMBERG — строительство малоэтажных домов в Калининграде. Создаем уникальные проекты и дома высокого качества по доступным ценам.">
       <meta name="keywords" content="строительство домов Калининград, DOMBERG, коттеджи под ключ, дом на заказ, застройщик Калининград">
       <meta name="author" content="DOMBERG">
       <meta name="robots" content="index, follow">
     
       <!-- Open Graph для соцсетей -->
       <meta property="og:title" content="DOMBERG — Строительство домов в Калининграде">
-      <meta property="og:description" content="Современные дома под ключ. Проекты, цены и индивидуальный подход. DOMBERG — надежный застройщик.">
+      <meta property="og:description" content="Современные дома под ключ. Строительство домов в Калининграде. DOMBERG — надежный застройщик.">
       <meta property="og:image" content="https://i.ibb.co/DPQdmhQF/image.png"> <!-- Заменить на актуальное изображение -->
       <meta property="og:url" content="https://domberg.ru/">
       <meta property="og:type" content="website">
